challenge12/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: my-deployment
spec:
 replicas: 1
 selector:
   matchLabels:
     app: my-deployment
 template:
   metadata:
     labels:
       app: my-deployment
   spec:
     containers:
     - name: my-container
       image: challenge12:latest
       imagePullPolicy: IfNotPresent
       ports:
       - containerPort: 80
