challenge12/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  type: NodePort
  selector: 
    app: my-deployment
  ports:
    - port: 80
      nodePort: 30080
      targetPort: 80
