challenge12/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: my-ingress
spec:
 rules:
 - host: app.example.com
   http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: web-app-service
           port:
             number: 80
     - pathType: Prefix
       path: "/admin"
       backend:
        service:
          name: admin-service
          port:
            number: 80
